get computer by slug
